Fix styling of editable areas on Firefox

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
-html, body, table, tbody, tr, td, td div {
+html, body, table, tbody, tr, td, td>div {
 	height: 100%
 }
 table {
